fixed contrast ratio

--- a/backend/cv/static/cv/maxxtor/cv.css
+++ b/backend/cv/static/cv/maxxtor/cv.css
@@ -12,8 +12,8 @@
       --selection: #2b2b3c;
       --text: #d2dae4;
       --text-subdued: #818d9c;
-      --interactive: #7676d0;
-      --interactive-hovered: #9595db;
+      --interactive: #9494ff;
+      --interactive-hovered: #b1b1ff;
       --divider: #25252d;
   
       --font-family-sans: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', 'Helvetica Neue', sans-serif;
